[package]
name = "smartmeter-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus_exporter = { git = "https://github.com/AlexanderThaller/prometheus_exporter" }
env_logger = "0.10"
log = { version = "0.4" }
pretty_env_logger = "0.4"
bytes = "1.4"
nom = "7.1.3"
serialport = "4.7.1"
hex = "0.4.3"
